--- a/examples/index.html
+++ b/examples/index.html
@@ -24,7 +24,7 @@
     </style>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js">
     </script>
-    <script src="../lib/isInViewport.js">
+    <script src="../lib/isInViewport.min.js">
     </script>
     <script src="./main.js">
     </script>
