Some tracking added to the examples.

--- a/examples/advanced.html
+++ b/examples/advanced.html
@@ -28,27 +28,42 @@
         left: 0;
         z-index: 1;
     }
-        .tolerance:before, .tolerance:after {
-            content:"";
-            display: table;
-        }
-        .tolerance:after {
-            clear: both;
-        }
+    .tolerance:before, .tolerance:after {
+        content:"";
+        display: table;
+    }
+    .tolerance:after {
+        clear: both;
+    }
     .tolerance {
         zoom: 1;
         /* For IE 6/7 (trigger hasLayout) */
     }
-        .tolerance * {
-            padding: 36px;
-            color: #fff;
-        }
+    .tolerance * {
+        padding: 36px;
+        color: #fff;
+    }
     </style>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js">
     </script>
     <script src="../lib/isInViewport.min.js">
     </script>
     <script src="./advanced.js">
+    </script>
+    <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-33892300-1']);
+    _gaq.push(['_setDomainName', 'muditameta.com']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+        var ga = document.createElement('script');
+        ga.type = 'text/javascript';
+        ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ga, s);
+    })();
     </script>
 </head>
 
@@ -79,7 +94,7 @@
         <div class="box">
             7
         </div>
-    </div>   
+    </div>
 </body>
 
 </html>
