--- a/examples/index.html
+++ b/examples/index.html
@@ -19,7 +19,7 @@
         text-align: center;
     }
     #container:after {
-        content: "";
+        content:"";
         display: block;
         clear: both;
     }
@@ -44,10 +44,27 @@
         float: left;
     }
     </style>
+    <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-33892300-1']);
+    _gaq.push(['_setDomainName', 'muditameta.com']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+        var ga = document.createElement('script');
+        ga.type = 'text/javascript';
+        ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ga, s);
+    })();
+    </script>
 </head>
 
 <body>
-    <a href="https://github.com/zeusdeux/isInViewport"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/zeusdeux/isInViewport">
+        <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub">
+    </a>
     <div id="header">
         <h1>isInViewport.js</h1>
     </div>
@@ -58,7 +75,7 @@
         <a href="./advanced.html" class="demos">
             Advanced demo
         </a>
-    </div>   
+    </div>
 </body>
 
 </html>
