Added callback method support, refactored, created sample docs, bumped version and updated recompressed min file with new changes

--- a/examples/index.html
+++ b/examples/index.html
@@ -75,6 +75,9 @@
         <a href="./advanced.html" class="demos">
             Advanced demo
         </a>
+        <a href="./advanced-callbacks.html" class="demos">
+          Advanced w/callback
+        </a>
     </div>
 </body>
 
