fixed text in the last div to be more explanatory

--- a/examples/advanced.html
+++ b/examples/advanced.html
@@ -95,7 +95,7 @@
       6
     </div>
     <div class="box last">
-      This div will never be in the viewport.
+      This div, if not in the tolerance area, will never turn light grey.
     </div>
   </div>
 </body>
