added examples for the new custom viewport feature

--- a/examples/index.html
+++ b/examples/index.html
@@ -25,7 +25,7 @@
     }
     .demos {
         display: inline-block;
-        margin:0 20px;
+        margin:5px 20px;
         height: 200px;
         width: 300px;
         background-color: #1F201C;
@@ -74,6 +74,9 @@
         </a>
         <a href="./advanced.html" class="demos">
             Advanced demo
+        </a>
+        <a href="./advanced-viewport.html" class="demos">
+            Custom viewport demo
         </a>
     </div>
 </body>
