--- a/tests/defaultViewportTests.html
+++ b/tests/defaultViewportTests.html
@@ -17,31 +17,29 @@
       margin-bottom: 2px;
       position: relative;
     }
-    .box.last {
-      color: #C5C7BC;
-    }
   </style>
 </head>
 
 <body>
-  <div id="container">
-    <div class="box">
-      1
-    </div>
-  </div>
   <div id="mocha"></div>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+  <script src="./lib/jquery.min.js"></script>
   <script src="../lib/isInViewport.min.js"></script>
   <script src="./lib/should.min.js"></script>
   <script src="./lib/mocha.js"></script>
   <script>
-    mocha.setup('bdd');
+    mocha.ui('bdd');
+    mocha.reporter('html');
   </script>
   <script src="defaultViewportTests.js"></script>
   <script>
     mocha.checkLeaks();
     mocha.globals(['jQuery']);
-    mocha.run();
+    if (window.mochaPhantomJS) {
+      mochaPhantomJS.run();
+    }
+    else {
+      mocha.run();
+    }
   </script>
 </body>
 
