refactored the tests

--- a/tests/customViewportTests.html
+++ b/tests/customViewportTests.html
@@ -32,7 +32,7 @@
 <body>
   <div id="mocha"></div>
   <script src="./lib/jquery.min.js"></script>
-  <script src="../lib/isInViewport.min.js"></script>
+  <script src="../lib/isInViewport.js"></script>
   <script src="./lib/should.min.js"></script>
   <script src="./lib/mocha.js"></script>
   <script>
