added a test a for when only viewport is provided to :in-viewport

--- a/tests/customViewportTests.html
+++ b/tests/customViewportTests.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>isInViewport: Default viewport tests</title>
+  <title>isInViewport: Custom viewport tests</title>
   <link rel="stylesheet" href="./lib/mocha.css" />
   <style>
     #container {
