--- a/tests/tests.html
+++ b/tests/tests.html
@@ -43,7 +43,7 @@
   </script>
 
   <script src="./lib/blanket.min.js"></script>
-  <script type="text/javascript" src="../node_modules/grunt-blanket-mocha/support/mocha-blanket.js"></script>
+  <script type="text/javascript" src="./lib/mocha-blanket.js"></script>
   <script src="defaultViewportTests.js"></script>
   <script src="customViewportTests.js"></script>
 
@@ -60,7 +60,7 @@
 
   <script>
     if (window.PHANTOMJS) {
-      blanket.options("reporter", "../node_modules/grunt-blanket-mocha/support/grunt-reporter.js");
+      blanket.options("reporter", "./lib/grunt-reporter.js");
     }
   </script>
 
