--- a/examples/index.html
+++ b/examples/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>
-        Test
+        isInViewport demo
     </title>
     <link rel="stylesheet" href="./common.css" />
     <style>
