Examples now use non minified script
Should help bump up the details in reported issues.

--- a/examples/advanced.html
+++ b/examples/advanced.html
@@ -49,7 +49,7 @@
   </style>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js">
   </script>
-  <script src="../lib/isInViewport.min.js">
+  <script src="../lib/isInViewport.js">
   </script>
   <script src="./advanced.js">
   </script>
