--- a/examples/advanced-viewport.html
+++ b/examples/advanced-viewport.html
@@ -69,7 +69,7 @@
   </style>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js">
   </script>
-  <script src="../lib/isInViewport.min.js">
+  <script src="../lib/isInViewport.js">
   </script>
   <script src="./advanced-viewport.js">
   </script>
