--- a/examples/basic.html
+++ b/examples/basic.html
@@ -57,7 +57,7 @@
   </style>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js">
   </script>
-  <script src="../lib/isInViewport.min.js">
+  <script src="../lib/isInViewport.js">
   </script>
   <script src="./basic.js">
   </script>
