--- a/examples/advanced.html
+++ b/examples/advanced.html
@@ -17,6 +17,15 @@
        height: 501px;
        width: 100%;
        margin-bottom: 2px;
+       text-align: center;
+     }
+     p {
+       padding: 0;
+       margin: 0;
+       line-height: 1.5em;
+       position: relative;
+       top: 50%;
+       transform: translateY(-50%);
      }
      .box.last {
        color: #C5C7BC;
@@ -77,25 +86,39 @@
     </div>
     <div id="container">
       <div class="box">
-        1
+        <p>
+          1
+        </p>
       </div>
       <div class="box">
-        2
+        <p>
+          2
+        </p>
       </div>
       <div class="box">
-        3
+        <p>
+          3
+        </p>
       </div>
       <div class="box">
-        4
+        <p>
+          4
+        </p>
       </div>
       <div class="box">
-        5
+        <p>
+          5
+        </p>
       </div>
       <div class="box">
-        6
+        <p>
+          6
+        </p>
       </div>
       <div class="box last">
-        This div, if not in the tolerance area, will never turn light grey.
+        <p>
+          This div, if not in the tolerance area, will never turn light grey.
+        </p>
       </div>
     </div>
   </body>
