Rewrite as ES6 module and update build pipeline

--- a/examples/index.html
+++ b/examples/index.html
@@ -90,7 +90,7 @@
         Custom viewport demo
       </a>
       <a href="./tests/tests.html" class="demos tests">
-        Tests &amp; code coverage
+        Tests
       </a>
     </div>
   </body>
