--- a/examples/advanced-viewport.html
+++ b/examples/advanced-viewport.html
@@ -69,7 +69,7 @@
     </style>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js">
     </script>
-    <script src="./isInViewport.js">
+    <script src="../lib/isInViewport.js">
     </script>
     <script src="./advanced-viewport.js">
     </script>
