--- a/examples/advanced.html
+++ b/examples/advanced.html
@@ -58,7 +58,7 @@
     </style>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js">
     </script>
-    <script src="./isInViewport.js">
+    <script src="../lib/isInViewport.js">
     </script>
     <script src="./advanced.js">
     </script>
