Update docs and bump major version

--- a/examples/es6-example/index.html
+++ b/examples/es6-example/index.html
@@ -56,7 +56,7 @@
        color: #fff;
      }
     </style>
-    <script src="./advanced.compiled.js">
+    <script src="./main.compiled.js">
     </script>
   </head>
 
