Switch to assets served over https

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -59,7 +59,7 @@
        color: #fff;
      }
     </style>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js">
     </script>
     <script src="../lib/isInViewport.js">
     </script>
