--- a/examples/advanced-viewport.html
+++ b/examples/advanced-viewport.html
@@ -67,7 +67,7 @@
        color: #fff;
      }
     </style>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js">
     </script>
     <script src="../lib/isInViewport.js">
     </script>
