--- a/examples/basic.html
+++ b/examples/basic.html
@@ -61,7 +61,7 @@
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js">
     </script>
-    <script src="../lib/isInViewport.js">
+    <script src="./isInViewport.js">
     </script>
     <script src="./basic.js">
     </script>
