--- a/examples/index.html
+++ b/examples/index.html
@@ -6,7 +6,7 @@
     <title>
       isInViewport demo
     </title>
-    <link rel="stylesheet" href="./common.css" />
+    <link rel="stylesheet" href="/common.css" />
     <style>
      #header {
        width: 100%;
@@ -80,16 +80,16 @@
       <h1>isInViewport.js</h1>
     </div>
     <div id="container">
-      <a href="./basic.html" class="demos">
+      <a href="/basic.html" class="demos">
         Basic demo
       </a>
-      <a href="./advanced.html" class="demos">
+      <a href="/advanced.html" class="demos">
         Advanced demo
       </a>
-      <a href="./advanced-viewport.html" class="demos">
+      <a href="/advanced-viewport.html" class="demos">
         Custom viewport demo
       </a>
-      <a href="./tests/tests.html" class="demos tests">
+      <a href="/tests/tests.html" class="demos tests">
         Tests
       </a>
     </div>
