--- a/tests/tests.html
+++ b/tests/tests.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>isInViewport: Default viewport tests</title>
-    <link rel="stylesheet" href="./lib/mocha.css" />
+    <link rel="stylesheet" href="lib/mocha.css" />
     <style>
      #container {
        width: 100%;
@@ -82,11 +82,11 @@
       <a href="/" class="right">isInViewport.js</a>
     </div>
     <div id="mocha"></div>
-    <script src="./lib/jquery.min.js"></script>
-    <script src="./lib/isInViewport.min.js"></script>
+    <script src="lib/jquery.min.js"></script>
+    <script src="lib/isInViewport.min.js"></script>
 
-    <script src="./lib/mocha.js"></script>
-    <script src="./lib/should.js"></script>
+    <script src="lib/mocha.js"></script>
+    <script src="lib/should.js"></script>
 
     <script>
      mocha.ui('bdd');
