--- a/examples/advanced-viewport.html
+++ b/examples/advanced-viewport.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Advanced-viewport usage example</title>
-    <link rel="stylesheet" href="./common.css" />
+    <link rel="stylesheet" href="/common.css" />
     <style>
      #container {
        width: 100%;
@@ -69,9 +69,9 @@
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js">
     </script>
-    <script src="./isInViewport.js">
+    <script src="/isInViewport.js">
     </script>
-    <script src="./advanced-viewport.js">
+    <script src="/advanced-viewport.js">
     </script>
     <script type="text/javascript">
      var _gaq = _gaq || [];
@@ -95,7 +95,7 @@
       <div id="innerContainer">
         <div id="viewport">
           <div class="tolerance">
-            <a href="./index.html" class="button left">Back</a>
+            <a href="/index.html" class="button left">Back</a>
             <a class="right">Tolerance Area (Tolerance = 100px)</a>
           </div>
           <div class="box">1</div>
