--- a/examples/basic.html
+++ b/examples/basic.html
@@ -6,7 +6,7 @@
     <title>
       Basic isInViewport Example
     </title>
-    <link rel="stylesheet" href="./common.css" />
+    <link rel="stylesheet" href="/common.css" />
     <style>
      .box {
        -webkit-box-sizing: border-box;
@@ -61,9 +61,9 @@
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js">
     </script>
-    <script src="./isInViewport.js">
+    <script src="/isInViewport.js">
     </script>
-    <script src="./basic.js">
+    <script src="/basic.js">
     </script>
     <script type="text/javascript">
      var _gaq = _gaq || [];
@@ -84,7 +84,7 @@
 
   <body>
     <div class="tolerance">
-      <a href="./index.html" class="button left">Back</a>
+      <a href="/index.html" class="button left">Back</a>
       <a class="right">Tolerance Area (Tolerance = 100px)</a>
     </div>
     <div id="container">
